# ao-harness

./: .cursorignore  .gitignore  AGENTS.md  Makefile  README.md  _c1_sweep.sh  _c1_sweep_rest.sh  config.yaml  scratch_compare.py
activation_oracles/: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  pyrightconfig.json  setup.sh
activation_oracles/ablations/: README.md
activation_oracles/data_pipelines/: pipeline_utils.py  regenerate_all.py
activation_oracles/docs/: ACTIVATION_ORACLES_GUIDE.md
activation_oracles/dpo_ao/: README.md  generate_dpo_pairs.py  generate_hallucination_pairs.py  prompts.py  train_dpo.py
activation_oracles/experiments/: activation_oracle_demo.ipynb  classification_eval.py  eval_awareness_ao_prompt_sweep.py  gender_open_ended_eval.py  hallucination_linear_probe.py  linear_probe.py  multilayer_activation_oracle_demo.ipynb  open_ended_linear_probe.py  paper_evals.sh  personaqa_knowledge_eval.py  personaqa_knowledge_yes_no_eval.py  personaqa_yes_no_eval.py  plot_eval_grouped.py  plot_eval_summaries.py  plot_hallucination_comparison.py  simple_llama_model_demo.py  ssc_open_ended_eval.py  test_multilayer_demo.py
activation_oracles/nl_probes/: base_experiment.py  sae.py  sft.py
activation_oracles/scripts/: aggregate_layer_sweep.py  aobench_absolute_comparison.py  aobench_absolute_v2.py  aobench_style_comparison.py  combined_sweep_plot.py  dump_model_understanding_samples.py  e2e_train_eval.py  final_summary_plot.py  full_leaderboard_descriptive.py  full_leaderboard_heatmap.py  full_leaderboard_plot.py  generate_chunked_convqa_anthropic.py  generate_semantic_past_lens.py  lr_sweep_plot.py  paper_plots.py  parse_aobench_logs.py  plot_v3_results.py  print_layer_sweep_results.py  run_ablation_train.sh  run_aobench_lr_sweep.sh  run_aobench_multi_layer.sh  run_aobench_sweep.sh  run_layer_sweep.sh  run_lr_sweep.sh  run_multi_layer.sh  run_phase3.sh
activation_oracles/tests/: test_layer_counts.py  test_model_understanding_open_ended_eval.py  test_open_ended_binary_scoring.py  test_open_ended_eval.py  test_open_ended_text_baselines.py  test_peft.py  test_positions.py  test_sft_e2e.py
activation_oracles/training_configs/: 134k_codex_pl_31k_spqav2_199k_sqav3_126k_cls.json  134k_pl_31k_spqav2_199k_sqav3_126k_cls.json  134k_pl_31k_spqav2_199k_sqav3_126k_cls_2ep.json  250k_pl_126k_cls_qwen3_14b_genonly.json  300k_full_mix.json  500k_codex_pl_31k_spqav2_199k_sqav3_126k_cls.json  500k_pl_31k_spqav2_126k_cls_qwen3_14b.json  500k_pl_31k_spqav2_126k_cls_qwen3_14b_evalonly.json  500k_pl_31k_spqav2_199k_sqav3_126k_cls.json  500k_pl_31k_spqav2_199k_sqav3_126k_cls_2ep.json  500k_pl_31k_spqav2_199k_sqav3_126k_cls_qwen3_14b.json  500k_pl_31k_spqav2_199k_sqav3_126k_cls_r256_2ep.json  500k_pl_31k_spqav2_199k_sqav3_300k_hb_126k_cls_qwen3_14b.json  500k_pl_31k_spqav2_199k_sqav3_300k_hb_300k_hbi_126k_cls_qwen3_14b.json  500k_pl_31k_spqav2_199k_sqav3_300k_hb_300k_hbiv2_126k_cls_qwen3_14b.json  500k_pl_31k_spqav2_199k_sqav3_50k_hb_126k_cls.json  500k_pl_31k_spqav2_199k_sqav3_50k_hb_126k_cls_qwen3_14b.json  500k_pl_31k_spqav2_199k_sqav3_50k_hb_50k_hbi_126k_cls_qwen3_14b.json  _phase3_ablations.py  _phase4_modelorg.py  _v2_recipe.py  cont_15k_hbi_75k_mix_qwen3_14b.json  (+10 more)
(+508 files in other folders)
